welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: not enough arguments for method faireM1: (c: java.awt.Color)Unit.
Unspecified value parameter c.
override def run() { faireM1()
                            ^